<resources>
    <string name="app_name">CondeTestWithImage</string>
    <string name="error_text">An error occurred while loading Data.</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="cell">Cell</string>
    <string name="name">Name</string>
    <string name="thumbnail">thumbnail</string>
    <string name="profileimage">profileImage</string>
</resources>