<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/_10dp"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity">
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_30dp"
        android:contentDescription="@string/profileimage"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/name"
        style="@style/Title"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/email"
        style="@style/Title"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/gender"
        style="@style/Title"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/cell"
        style="@style/Title"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCell"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        style="@style/Title"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDob"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        style="@style/Title"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        style="@style/Title"
        />
</androidx.constraintlayout.widget.ConstraintLayout>